--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
-    "react-native": "0.75.5"
+    "react-native": "0.75.5",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.37.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native/babel-preset": "0.75.5",
     "@react-native/eslint-config": "0.75.5",
     "@react-native/metro-config": "0.75.5",
