--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/firestore": "^20.5.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "expo-constants": "^17.1.6",
+    "expo-linking": "^7.1.5",
+    "expo-router": "^5.1.0",
+    "expo-splash-screen": "^0.30.9",
+    "expo-status-bar": "^2.2.3",
+    "lucide-react-native": "^0.523.0",
     "react": "18.3.1",
     "react-native": "0.75.5",
     "react-native-safe-area-context": "^4.7.4",
