Fix Firebase initialization, navigation, and UI issues - Add Firebase initialization to AppDelegate - Fix React Navigation setup and remove Expo Router conflicts - Install and configure React Native SVG - Fix font issues by using system fonts - Update color scheme and add font configuration - Fix Firestore indexes and bundle ID configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.clearcue2"
+    namespace "org.reactjs.native.example.clueme2"
     defaultConfig {
-        applicationId "com.clearcue2"
+        applicationId "org.reactjs.native.example.clueme2"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
