--- a/package.json
+++ b/package.json
@@ -17,22 +17,18 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo-constants": "^17.1.6",
-    "expo-linking": "^7.1.5",
-    "expo-router": "^5.1.0",
-    "expo-splash-screen": "^0.30.9",
-    "expo-status-bar": "^2.2.3",
     "lucide-react-native": "^0.523.0",
     "react": "18.3.1",
     "react-native": "0.75.5",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.37.0"
+    "react-native-screens": "^3.37.0",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/cli": "latest",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native/babel-preset": "0.75.5",
     "@react-native/eslint-config": "0.75.5",
     "@react-native/metro-config": "0.75.5",
