--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/firestore": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "date-fns": "^4.1.0",
+    "i18next": "^25.2.1",
     "lucide-react-native": "^0.523.0",
     "react": "18.3.1",
+    "react-i18next": "^15.5.3",
     "react-native": "0.75.5",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.37.0",
     "react-native-svg": "^15.12.0"
