feat: Implement comprehensive push notification system for iOS
- Add Firebase Messaging package and iOS configuration
- Create NotificationService with FCM token management
- Implement notification permission handling and request flow
- Add useNotifications React hook for state management
- Update UserProfile interface to include FCM token fields
- Integrate notification controls in Settings screen
- Add iOS Info.plist configuration for background notifications
- Create NotificationTest component for debugging
- Add comprehensive notification translations
- Handle foreground, background, and app-closed notification states
- Support family and user-specific notification sending
- Add proper error handling and loading states

--- a/ios/ClearCue2/Info.plist
+++ b/ios/ClearCue2/Info.plist
@@ -47,5 +47,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>ClearCue uses notifications to remind you about important tasks and family updates.</string>
 </dict>
 </plist>
