Remove large iOS build artifacts and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ DerivedData
 *.xcuserstate
 **/.xcode.env.local
 
+# iOS Build Artifacts
+*.xcarchive/
+ios/ClearCue2.xcarchive/
+ios/build/
+ios/DerivedData/
+
 # Android/IntelliJ
 #
 build/
