--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.reactjs.native.example.clueme2</string>
+	<string>com.clearcue.ClearCue2</string>
 	<key>PROJECT_ID</key>
 	<string>clueme-36fb2</string>
 	<key>STORAGE_BUCKET</key>
