--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "generate:icons": "node scripts/generate-icons.js && node scripts/generate-android-icons.js",
+    "generate:ios-icons": "node scripts/generate-icons.js",
+    "generate:android-icons": "node scripts/generate-android-icons.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -15,8 +18,9 @@
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/firestore": "^20.5.0",
-    "@react-native-firebase/messaging": "^22.2.1",
+    "@react-native-firebase/messaging": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "date-fns": "^4.1.0",
@@ -26,9 +30,11 @@
     "react-i18next": "^15.5.3",
     "react-native": "0.75.5",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.37.0",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,6 +52,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "sharp": "^0.34.2",
     "typescript": "5.0.4"
   },
   "engines": {
