feat: prepare for production - update app configuration, icons, and core functionality

--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
-  "name": "ClearCue2",
-  "displayName": "ClearCue"
+  "name": "ClearCue",
+  "displayName": "ClearCue",
+  "icon": "./src/assets/images/icon.png"
 }
