--- a/ios/ClearCue2/Info.plist
+++ b/ios/ClearCue2/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ClearCue2</string>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
+	<string>ClearCue</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -35,6 +35,22 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSUserNotificationUsageDescription</key>
+	<string>ClearCue uses notifications to remind you about important tasks and family updates.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+		<string>processing</string>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.clearcue.ClearCue2.background-fetch</string>
+		<string>com.clearcue.ClearCue2.background-processing</string>
+		<string>com.clearcue.ClearCue2.reminder-processing</string>
+		<string>com.clearcue.ClearCue2.notification-processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -49,11 +65,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
-	<key>NSUserNotificationUsageDescription</key>
-	<string>ClearCue uses notifications to remind you about important tasks and family updates.</string>
 </dict>
 </plist>
