--- a/package.json
+++ b/package.json
@@ -6,11 +6,28 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "react-native start",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "generate:icons": "node scripts/generate-icons.js && node scripts/generate-android-icons.js",
     "generate:ios-icons": "node scripts/generate-icons.js",
-    "generate:android-icons": "node scripts/generate-android-icons.js"
+    "generate:android-icons": "node scripts/generate-android-icons.js",
+    "build:android": "cd android && ./gradlew assembleRelease",
+    "build:android:bundle": "cd android && ./gradlew bundleRelease",
+    "build:ios": "cd ios && xcodebuild -workspace ClearCue2.xcworkspace -scheme ClearCue2 -configuration Release -destination generic/platform=iOS -archivePath ClearCue2.xcarchive archive",
+    "build:ios:simulator": "cd ios && xcodebuild -workspace ClearCue2.xcworkspace -scheme ClearCue2 -configuration Release -destination 'platform=iOS Simulator,name=iPhone 15' build",
+    "clean:android": "cd android && ./gradlew clean",
+    "clean:ios": "cd ios && xcodebuild clean -workspace ClearCue2.xcworkspace -scheme ClearCue2",
+    "clean": "npm run clean:android && npm run clean:ios",
+    "pod:install": "cd ios && pod install",
+    "pod:update": "cd ios && pod update",
+    "typecheck": "tsc --noEmit",
+    "prebuild": "npm run lint && npm run typecheck",
+    "build:production": "./scripts/build-production.sh",
+    "build:production:android": "./scripts/build-production.sh android",
+    "build:production:ios": "./scripts/build-production.sh ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
