--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "sharp": "^0.34.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
